# webos_dalvik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  cpu-features.h.in  dalvik_system_Zygote-stub.cpp.in  dlmalloc_stubs.c  targets.cmake  toolchain.WebOS-sdk-3.0.5.cmake  webOSConfig.cmake  webOSConfig.h.in  webos-package.cmake  webos-toolchain.cmake
android_cmake_files/: Crypto.cmake  Dvm.cmake  NativeCode.cmake  Ssl.cmake  common.cmake  dalvik.cmake  dalvikvm.cmake  expat.cmake  fdlibm.cmake  i18n.cmake  icu4c.cmake  libcore.cmake  libcutils.cmake  libdex.cmake  liblog.cmake  openssl.cmake  vm.cmake  zlib.cmake
android_cmake_files-android-4.0.4_r2.1/: Dvm.cmake  JavaLibrary.cmake  NativeCode.cmake  ReconfigureDvm.cmake  app_process.cmake  binder.cmake  common.cmake  core.cmake  crypto.cmake  dalvik.cmake  dalvikvm.cmake  dexopt.cmake  dx.cmake  dx_src.cmake  giflib.cmake  i18n.cmake  icu4c.cmake  jni.cmake  jpeg.cmake  libcore_luni_sub.cmake  libcutils.cmake  liblog.cmake  libnativehelper.cmake  libpng.cmake  openssl.cmake  safe-iop.cmake  skia.cmake  ssl.cmake  utils.cmake  vm.cmake  webos-config.cmake  webp.cmake  zlib.cmake
android_cmake_files-master/: Crypto.cmake  Dvm.cmake  ReconfigureDvm.cmake  Ssl.cmake  common.cmake  dalvikvm.cmake  expat.cmake  i18n.cmake  libcore_dalvik_sub.cmake  libcore_luni_sub.cmake  libdex.cmake  liblog.cmake  libnativehelper.cmake  openssl.cmake  vm.cmake  webos-config.cmake  zlib.cmake
com.kai.dalvikvm/: appinfo.json  package.properties
dvm_test/: HelloWorld.java
system/: CMakeLists.txt
test/: CMakeLists.txt  dltest.c
webos_runtime/: CMakeLists.txt  android_internal_os_ZygoteInit.cpp  android_net_LocalSocketImpl.cpp  android_os_SystemClock.cpp  android_os_SystemProperties.cpp  android_util_EventLog.cpp  android_util_Log.cpp  app_main.cpp  init_util.h  webOSRuntime.cpp  webOSRuntime.h
